<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Movie &amp; TV Show Catalog</string>
    <string name="main_title_movie">Popular Movie</string>
    <string name="main_title_tv">Popular TV Show</string>
    <string name="main_title_release">Release Today!</string>
    <string name="title_movie">Movie</string>
    <string name="title_tv">TV Show</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_release">Release</string>
    <string name="lbl_genre">Genre</string>
    <string name="lbl_runtime">Runtime</string>
    <string name="lbl_episode_runtime">Episode Runtime</string>
    <string name="detail_title">%1$s</string>
    <string name="detail_vote">%1$s/10</string>
    <string name="detail_runtime">%1$s minutes</string>
    <string name="detail_genre">%1$s</string>
    <string name="list_contents">%1$s</string>
    <string name="list_year">(%1$s)</string>
    <string name="menu_title_lang_setting">Languange Setting</string>
    <string name="server_error">An error has occurred on the server</string>
    <string name="search_not_found">Search Not Found</string>
    <string name="invalid_api_key">An error has occurred in the application</string>
    <string name="movie_error404_message">The Movie you requested could not be found</string>
    <string name="tvshow_error404_message">The Movie you requested could not be found</string>
    <string name="img_poster_desc">This is poster of the movie or tv show</string>
    <string name="ic_star_desc">This is star icon</string>
    <string name="btn_back_desc">This is back button</string>
    <string name="btn_delete_desc">This is delete button</string>
    <string name="fav_movie_empty">There is no Favorite Movie</string>
    <string name="fav_tvshow_empty">There is no Favorite TV Show</string>
    <string name="fav_movie_delete_confirm">This Movie will be deleted from Favorite List</string>
    <string name="fav_tvshow_delete_confirm">This TV Show will be deleted from Favorite List</string>
    <string name="fav_movie_deletion_title">Delete Favorite Movie</string>
    <string name="fav_tvshow_deletion_title">Delete Favorite TV Show</string>
    <string name="insert_fav_tvshow_success">TV Show successfully added to Favorite List</string>
    <string name="insert_fav_movie_success">Movie successfully added to Favorite List</string>
    <string name="delete_fav_tvshow_success">TV Show successfully deleted from Favorite List</string>
    <string name="delete_fav_movie_success">Movie successfully deleted from Favorite List</string>
    <string name="error_conn_message">Please check your internet connection</string>
    <string name="alert_proceed">Proceed</string>
    <string name="alert_cancel">Cancel</string>
    <string name="release_reminder_title">Release Reminder</string>
    <string name="daily_reminder_title">Daily Reminder</string>
    <string name="release_reminder_desc">Reminder showing the Movie that released today</string>
    <string name="daily_reminder_desc">Reminder for return to the app</string>
    <string name="release_reminder_on_msg">You will get reminder for Movie that released today</string>
    <string name="daily_reminder_on_msg">You will get daily reminder for return to the app</string>
    <string name="daily_reminder_notif_msg">We missing you!</string>
    <string name="reminder_off_msg">You won\'t get %1$s again</string>
    <string name="movie_release_notif_content">%1$s has been released today!</string>
    <string name="reminder_setting">Reminder Setting</string>
    <string name="setting">Setting</string>
    <string name="fav_movie_widget_banner">Favorite Movie</string>
    <string name="lbl_overview">Overview</string>
    <string name="fav_tvshow_widget_banner">Favorite TV Show</string>
    <string name="image_is_not_available">Image is not available yet</string>
    <string name="dash_for_null">-</string>
    <string name="not_available_yet">Not available yet</string>
    <string name="title_search">Search</string>
    <string name="search_movie_hint">Search Movie</string>
    <string name="search_tv_hint">Search TV Show</string>
</resources>
