<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always"/>
    <item
        android:title="@string/setting"
        android:icon="@drawable/ic_settings_24dp"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/lang_setting"
                android:title="@string/menu_title_lang_setting"
                app:showAsAction="collapseActionView"/>
            <item
                android:id="@+id/reminder_setting"
                android:title="@string/reminder_setting"
                app:showAsAction="collapseActionView"/>
        </menu>
    </item>
</menu>